--- a/blocks/element/__like/element__like.css
+++ b/blocks/element/__like/element__like.css
@@ -1,7 +1,14 @@
 .element__like {
-    width: 22px;
+    width: 24px;
     height: 19px;
     margin-top: 6px;
+    background-image: url("../../../images/cuore1.svg");
+    background-repeat: no-repeat;
+    background-size: 22px 19px;
+    background-position: center;
+    border: none;
+    background-color: #FFFFFF;
+    cursor: pointer;
 }
 
 .element__like:hover {
