--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,6 +5,7 @@
     line-height: 22px;
     color: #545454;
     margin: 67px 762px 60px 200px;
+    flex-shrink: 0;
 }
 
 @media screen and (max-width: 1100px) {
