--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,19 +1,20 @@
 .header {
-    max-width: 69%;
-    max-height: 6%;
+    min-width: 69%;
     margin: 45px auto 40px;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: rgba(84, 84, 84, 0.7);
 }
 
 @media screen and (max-width: 960px) {
     .header {
-        max-width: 100%;
-        padding: 28px 0 42px;
-        margin: 0 auto;
+        min-width: 100%;
+        margin: 28px 0 42px;
     }
 }
 
 @media screen and (max-width: 380px) {
     .header {
-        padding-bottom: 38px;
+        margin-bottom: 38px;
     }
 }
