--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,4 +4,7 @@
     margin: 0 auto;
     font-family: 'Inter', 'Arial', sans-serif;
     color: #FFFFFF;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
