--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,7 +1,7 @@
 .popup__close {
     width: 32px;
     height: 32px;
-    background: transparent url("../../../img4/Close Icon.svg") no-repeat center;
+    background: transparent url("../../../images/Close Icon.svg") no-repeat center;
     border: none;
     padding: 0;
     margin: 0;
