--- a/blocks/popup/__element/popup__element.css
+++ b/blocks/popup/__element/popup__element.css
@@ -1,20 +1,20 @@
-.popup__name {
+.popup__element {
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
     color: #000000;
-    margin: 0 auto 13px;
+    margin: 0 auto 30px;
     border: none;
     width: 83%;
-    padding: 0;
+    padding: 0 0 13px;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    border-bottom-color: rgba(84, 84, 84, 0.2);
 }
 
 @media screen and (max-width: 960px) {
     .popup__name {
         max-width: 238px;
-        max-height: 14px;
         margin: 0 22px 13px;
-        font-size: 14px;
-        line-height: 17px;
     }
 }
