--- a/blocks/profile/__info-add/profile__info-add.css
+++ b/blocks/profile/__info-add/profile__info-add.css
@@ -1,23 +1,20 @@
 .profile__info-add {
     width: 150px;
     height: 50px;
-    background-color: #000000;
     border: 2px solid #FFFFFF;
     box-sizing: border-box;
     border-radius: 2px;
-    background-image: url("../../../img4/plus.svg");
-    background-repeat: no-repeat;
-    background-size: 22px 22px;
-    background-position: center;
+    background: transparent url("../../../images/plus.svg") no-repeat center;
     margin-top: 33px;
     margin-bottom: 33px;
     padding: 0;
+    cursor: pointer;
+    background-size: 22px 22px;
 }
 
 @media screen and (max-width: 960px) {
     .profile__info-add {
         width: 215px;
-        background-size: 16px 16px;
         margin: 0 auto;
     }
 }
@@ -25,5 +22,6 @@
 @media screen and (max-width: 380px) {
     .profile__info-add {
         width: 100%;
+        background-size: 16px 16px;
     }
 }
