--- a/blocks/profile/__info-edit/profile__info-edit.css
+++ b/blocks/profile/__info-edit/profile__info-edit.css
@@ -1,17 +1,14 @@
 .profile__info-edit {
     width: 24px;
     height: 24px;
-    background-image: url("../../../img4/pencil.svg");
-    background-repeat: no-repeat;
-    background-size: 10px 10px;
-    background-position: center;
-    background-color: #000000;
+    background: transparent url("../../../images/pencil.svg") no-repeat center;
     border: 1px solid #FFFFFF;
     box-sizing: border-box;
-    padding-top: 6px;
-    padding-bottom: 6px;
+    padding: 0;
     grid-area: info-edit;
     margin-top: 15px;
+    cursor: pointer;
+    background-size: 10px 10px;
 }
 
 @media screen and (max-width: 1100px) {
@@ -24,9 +21,7 @@
     .profile__info-edit {
         width: 18px;
         height: 18px;
-        background-size: 7px 7px;
-        padding-top: 5px;
-        padding-bottom: 5px;
         margin-top: 8px;
+        background-size: 8px 8px;
     }
 }
