--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -3,7 +3,7 @@
     font-weight: 500;
     font-size: 42px;
     line-height: 1.14;
-    max-width: 93%;
+    min-width: 108.3%;
     margin: 0;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -21,7 +21,7 @@
         font-size: 27px;
         line-height: 33px;
         text-align: center;
-        max-width: 83%;
+        min-width: 60%;
         margin-left: 46px;
     }
 }
