--- a/blocks/profile/__profession/profile__profession.css
+++ b/blocks/profile/__profession/profile__profession.css
@@ -22,6 +22,6 @@
 @media screen and (max-width: 380px) {
     .profile__profession {
         font-size: 14px;
-        margin-left: 18px;
+        margin: 0 auto;
     }
 }
