--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,6 @@
 @import url(../vendor/normalize.css);
 @import url(../fonts/fonts.css);
+@import url(../blocks/content/content.css);
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__group/element__group.css);
 @import url(../blocks/element/__like/element__like.css);
@@ -8,7 +9,6 @@
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/header/header.css);
-@import url(../blocks/header/__line/header__line.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/link/link.css);
 @import url(../blocks/page/page.css);
@@ -16,13 +16,10 @@
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/__content/popup__content.css);
 @import url(../blocks/popup/__form/popup__form.css);
-@import url(../blocks/popup/__line/popup__line.css);
-@import url(../blocks/popup/__name/popup__name.css);
-@import url(../blocks/popup/__profession/popup__profession.css);
+@import url(../blocks/popup/__element/popup__element.css);
 @import url(../blocks/popup/__save/popup__save.css);
-@import url(../blocks/popup/__text/popup__text.css);
 @import url(../blocks/popup/__title/popup__title.css);
-@import url(../blocks/popup/_opened-close/popup_opened-close.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__info/profile__info.css);
