--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -4,9 +4,8 @@
     background: transparent url("../../../images/Close Icon.svg") no-repeat center;
     border: none;
     padding: 0;
-    margin: 0;
     cursor: pointer;
-    align-self: end;
+    align-self: center;
     grid-area: close;
 }
 
