--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -1,18 +1,24 @@
 .popup__content {
     width: 100%;
-    max-width: 430px;
+    min-width: 423px;
     background: #FFFFFF;
     color: #000000;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    align-self: end;
     grid-area: content;
+    align-self: center;
+}
+
+@media screen and (max-width: 1100px) {
+    .popup__content {
+        min-width: 323px;
+    }
 }
 
 @media screen and (max-width: 960px) {
     .popup__content {
-        margin: 0 auto;
+        min-width: 282px;
     }
 }
