--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -8,27 +8,27 @@
         "content .";
     row-gap: 8px;
     column-gap: 8px;
-    position: absolute;
-    top: 19%;
-    left: 33%;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 1100px) {
     .popup__form {
-        min-width: 47%;
+        min-width: 36%;
         row-gap: 16px;
         grid-template-areas:
         ". close"
         "content content";
         column-gap: 0;
-        top: 12%;
-        left: 26%;
+    }
+}
+
+@media screen and (max-width: 960px) {
+    .popup__form {
+        min-width: 39%;
     }
 }
 
 @media screen and (max-width: 610px) {
     .popup__form {
-        left: 3.5%;
-        min-width: 93%;
+        min-width: 55%;
     }
 }
