--- a/blocks/popup/__content/popup__content.css
+++ b/blocks/popup/__content/popup__content.css
@@ -1,6 +1,6 @@
 .popup__content {
-    width: 100%;
     min-width: 423px;
+    max-width: 430px;
     background: #FFFFFF;
     color: #000000;
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
