--- a/blocks/element/__group/element__group.css
+++ b/blocks/element/__group/element__group.css
@@ -4,5 +4,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 25px 15px 31px 21px;
+    margin: 25px 15px 32px 21px;
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+    z-index: 1;
 }
