--- a/blocks/element/__mask-group/element__mask-group.css
+++ b/blocks/element/__mask-group/element__mask-group.css
@@ -3,6 +3,10 @@
     min-height: 282px;
     object-fit: cover;
     border-radius: 10px 10px 0 0;
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+    z-index: 0;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 1275px) {
@@ -14,11 +18,13 @@
 @media screen and (max-width: 610px) {
     .element__mask-group {
         min-height: 350px;
+        margin-bottom: 20px;
     }
 }
 
 @media screen and (max-width: 380px) {
     .element__mask-group {
         min-height: 282px;
+        margin-bottom: 0;
     }
 }
