--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -5,6 +5,15 @@
     padding: 0;
     background: #FFFFFF;
     border-radius: 10px;
+    display: grid;
+    grid-template-columns: 86% 14%;
+    grid-template-rows: 77% 23%;
+}
+
+@media screen and (max-width: 1275px) {
+    .element {
+        grid-template-rows: 83% 17%;
+    }
 }
 
 @media screen and (max-width: 960px) {
@@ -18,5 +27,12 @@
     .element {
         max-width: 98%;
         margin: 0 19px;
+        grid-template-rows: 80% 20%;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    .element {
+             grid-template-rows: 77% 23%;
     }
 }
