--- a/pages/index.css
+++ b/pages/index.css
@@ -4,8 +4,10 @@
 @import url(../blocks/element/element.css);
 @import url(../blocks/element/__group/element__group.css);
 @import url(../blocks/element/__like/element__like.css);
+@import url(../blocks/element/__like/_active/element__like_active.css);
 @import url(../blocks/element/__location/element__location.css);
 @import url(../blocks/element/__mask-group/element__mask-group.css);
+@import url(../blocks/element/__remove/element__remove.css);
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/header/header.css);
@@ -15,10 +17,15 @@
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/__content/popup__content.css);
+@import url(../blocks/popup/__content-group/popup__content-group.css);
 @import url(../blocks/popup/__form/popup__form.css);
 @import url(../blocks/popup/__element/popup__element.css);
+@import url(../blocks/popup/__group/popup__group.css);
+@import url(../blocks/popup/__location/popup__location.css);
+@import url(../blocks/popup/__mask-popup/popup__mask-popup.css);
 @import url(../blocks/popup/__save/popup__save.css);
 @import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/_mask-group/popup_mask-group.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
