--- a/blocks/popup/__group/popup__group.css
+++ b/blocks/popup/__group/popup__group.css
@@ -9,5 +9,15 @@
         "content .";
     row-gap: 8px;
     column-gap: 8px;
+}
 
+@media screen and (max-width: 610px) {
+    .popup__group {
+        min-width: 0;
+        row-gap: 16px;
+        grid-template-areas:
+        ". close"
+        "content content";
+        column-gap: 0;
+    }
 }
