--- a/blocks/popup/__location-name/popup__location-name.css
+++ b/blocks/popup/__location-name/popup__location-name.css
@@ -1,6 +1,7 @@
-.popup__location {
+.popup__location-name {
     font-weight: 400;
     font-size: 12px;
     line-height: 15px;
-
+    color: #FFFFFF;
+    margin: 10px 0 0;
 }
