--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,4 +7,7 @@
     left: 0;
     position: fixed;
     z-index: 2;
+    transition: visibility .5s, opacity 1s ease;
+    visibility: hidden;
+    opacity: 0;
 }
