--- a/blocks/popup/__error/popup__error.css
+++ b/blocks/popup/__error/popup__error.css
@@ -4,9 +4,14 @@
     font-size: 12px;
     line-height: 15px;
     color: #FF0000;
-    /*opacity: 0;*/
     position: absolute;
-    top: 400px;
-    left: 255px;
-    transition: 0.3s;
+    top: 33px;
+    min-width: 358px;
+    margin: auto;
+}
+
+@media screen and (max-width: 1100px) {
+    .popup__error {
+        min-width: 251px;
+    }
 }
