--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -1,7 +1,7 @@
 .elements {
     max-width: 69%;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(282px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(282px, 282px));
     grid-row-gap: 20px;
     grid-column-gap: 17px;
     flex-wrap: wrap;
