--- a/src/blocks/element/__mask-group/element__mask-group.css
+++ b/src/blocks/element/__mask-group/element__mask-group.css
@@ -1,6 +1,6 @@
 .element__mask-group {
-    max-width: 100%;
-    min-height: 282px;
+    width: 100%;
+    height: 282px;
     object-fit: cover;
     border-radius: 10px 10px 0 0;
     grid-column: 1 / 3;
@@ -11,20 +11,20 @@
 
 @media screen and (max-width: 1275px) {
     .element__mask-group {
-        min-height: 431px;
+        height: 431px;
     }
 }
 
 @media screen and (max-width: 610px) {
     .element__mask-group {
-        min-height: 350px;
+        height: 350px;
         margin-bottom: 20px;
     }
 }
 
 @media screen and (max-width: 380px) {
     .element__mask-group {
-        min-height: 282px;
+        height: 282px;
         margin-bottom: 0;
     }
 }
