--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -5,6 +5,7 @@
 @import url(../blocks/element/__group/element__group.css);
 @import url(../blocks/element/__like/element__like.css);
 @import url(../blocks/element/__like/_active/element__like_active.css);
+@import url(../blocks/element/__likes/element__likes.css);
 @import url(../blocks/element/__location/element__location.css);
 @import url(../blocks/element/__mask-group/element__mask-group.css);
 @import url(../blocks/element/__remove/element__remove.css);
@@ -29,10 +30,13 @@
 @import url(../blocks/popup/__save/popup__save.css);
 @import url(../blocks/popup/__save/_type_disabled/popup__save_type_disabled.css);
 @import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__title/_delete/popup__title_delete.css);
 @import url(../blocks/popup/_mask-group/popup_mask-group.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__avatar-button/profile__avatar-button.css);
+@import url(../blocks/profile/__container/profile__container.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__info-add/profile__info-add.css);
 @import url(../blocks/profile/__info-edit/profile__info-edit.css);
