--- a/main.css
+++ b/main.css
@@ -33,7 +33,7 @@
 .popup__title_delete{max-width:358px;padding-bottom:20px;padding-right:36px}
 .popup_mask-group{background-color:rgba(0,0,0,.9)}
 .popup_opened{opacity:1;visibility:visible}
-.profile{display:flex;flex-direction:row;justify-content:start;margin:0 auto 51px;max-width:69%}@media screen and (max-width:960px){.profile{flex-direction:column;justify-content:center;margin:0 19px 36px;max-width:95%}}
+.profile{display:flex;flex-direction:row;justify-content:flex-start;margin:0 auto 51px;max-width:69%}@media screen and (max-width:960px){.profile{flex-direction:column;justify-content:center;margin:0 19px 36px;max-width:95%}}
 .profile__avatar{border-radius:50%;height:120px;margin:0;-o-object-fit:cover;object-fit:cover;overflow:hidden;padding:0;width:120px}@media screen and (max-width:960px){.profile__avatar{margin:0 auto 21px}}
 .profile__avatar-button{background:rgba(0,0,0,.8) url(a086f758840ae814ecde.svg) no-repeat 50%;border:0;height:100%;left:0;opacity:0;padding:0;position:absolute;top:0;width:100%}.profile__avatar-button:hover{cursor:pointer;opacity:1}
 .profile__container{margin:auto;position:relative}
