--- a/src/blocks/popup/__content/popup__content.css
+++ b/src/blocks/popup/__content/popup__content.css
@@ -9,6 +9,7 @@
     flex-direction: column;
     grid-area: content;
     align-self: center;
+    position: relative;
 }
 
 @media screen and (max-width: 1100px) {
